--- a/configure.in
+++ b/configure.in
@@ -640,6 +640,7 @@ FW_CHECK_DEBUG
 FW_CHECK_NEW_DTAGS
 FW_CHECK_F_NO_BUILTIN
 FW_CHECK_RELRO_FPIC
+FW_CHECK_FDECLSPEC
 echo "******************************"
 
 
